--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <title>OceanSavy</title>
 </head>
 
-<body style="text-align: center; position:absolute; top:40%; left: 12%; font-size:500%;">
-  Website Construction in progress...
+<body  style="display: flex; justify-content: center;">
+  
+  <h1 style="font-size:50px; position: absolute; margin: 0; top: 50%; ">
+    Website Construction in progress...
+  </h1> 
 </body>
 
 </html>
