Another constr page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body  style="display: flex; justify-content: center;">
   
-  <h1 style="font-size: 2vmax  ; position: absolute; margin: 0; top: 40%; left:32% ">
+  <h1 style=" text-align: center ;font-size: 1.5vmax  ; position: absolute; margin: 0; top: 40%; left:28% ">
     Website Construction in progress...
   </h1> 
 </body>
